# oracle-arm

./: .dockerignore  .env.example  .gitignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
docs/superpowers/plans/: 2026-07-18-soft-console-select.md
docs/superpowers/specs/: 2026-07-18-soft-console-select-design.md
oracle_arm_console/: __init__.py  __main__.py  cli.py  dev.py  i18n.py  instance.py  jobs.py  notifications.py  oci_credentials.py  oci_resources.py  provisioner.py  security.py  settings.py  ssh_keys.py  web.py
oracle_arm_console/locales/: en.json  zh.json
oracle_arm_console/static/: app.css  app.js  logs.js  settings.js  soft-select.js
oracle_arm_console/templates/: _lang_switch.html  base.html  dashboard.html  login.html  logs.html  settings.html
tests/: test_instance.py  test_jobs.py  test_notifications.py  test_oci_credentials.py  test_provisioner.py  test_security.py  test_settings.py  test_ssh_keys.py  test_web.py
